[gd_scene load_steps=28 format=3 uid="uid://djd63bs3m84o3"]

[ext_resource type="Script" path="res://login.gd" id="1_q0dq4"]
[ext_resource type="Texture2D" uid="uid://dgpmyd1cn0eb3" path="res://sprites/bg.png" id="2_a26nv"]
[ext_resource type="Texture2D" uid="uid://blus3jct6drmr" path="res://sprites/Untitled78_20240409205301_edit_542478463116914.png" id="3_0h6jy"]
[ext_resource type="Texture2D" uid="uid://dlld7cuqjqdrj" path="res://sprites/mic.png" id="3_jdk1j"]
[ext_resource type="FontFile" uid="uid://cxo00kjcsmt7t" path="res://addons/fonts/BalooBhaijaan-Regular.ttf" id="4_7qned"]
[ext_resource type="Texture2D" uid="uid://gwkv8dgira30" path="res://sprites/Untitled80_20240416124711.png" id="5_kowwg"]
[ext_resource type="FontFile" uid="uid://ba8tt4gxqogjq" path="res://addons/fonts/FrancoisOne.ttf" id="6_y8exg"]
[ext_resource type="Texture2D" uid="uid://cjo2l4jc4ile1" path="res://sprites/user.png" id="7_2g346"]
[ext_resource type="Texture2D" uid="uid://dm46g3rno6bkd" path="res://sprites/exit.png" id="9_gfvi5"]
[ext_resource type="FontFile" uid="uid://bnw5ghde11g7m" path="res://addons/fonts/Monoton-Regular.ttf" id="10_yfotg"]
[ext_resource type="Texture2D" uid="uid://b70i01bly4f06" path="res://sprites/panel.png" id="11_rt8o8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ofam"]
bg_color = Color(0.556863, 0.556863, 0.556863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qapi"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1i2xe"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1orn"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04ftm"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rgar"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7pi3v"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x06gj"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1mlt"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75q5s"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qjy2l"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufaa2"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oruqj"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_una7u"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4orr"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qya8g"]
bg_color = Color(0, 0, 0, 1)

[node name="login_control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q0dq4")

[node name="mcLogin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginScreen" type="TextureRect" parent="mcLogin"]
layout_mode = 2
texture = ExtResource("2_a26nv")
expand_mode = 1

[node name="Mic" type="Sprite2D" parent="mcLogin/LoginScreen"]
position = Vector2(2071, 677.5)
scale = Vector2(0.317057, 0.412435)
texture = ExtResource("3_jdk1j")

[node name="signup" type="TextureRect" parent="mcLogin/LoginScreen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 330.0
offset_top = 150.0
offset_right = -1192.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0h6jy")
expand_mode = 1

[node name="vb_account" type="VBoxContainer" parent="mcLogin/LoginScreen"]
layout_mode = 2
offset_left = 550.0
offset_top = 373.0
offset_right = 1149.0
offset_bottom = 508.0

[node name="Account" type="Label" parent="mcLogin/LoginScreen/vb_account"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7qned")
theme_override_font_sizes/font_size = 40
text = "Account"

[node name="indicator" type="Label" parent="mcLogin/LoginScreen/vb_account/Account"]
layout_mode = 2
offset_left = 145.0
offset_top = -2.0
offset_right = 211.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "*"

[node name="Email" type="TextEdit" parent="mcLogin/LoginScreen/vb_account/Account"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
offset_left = 2.0
offset_top = 63.0
offset_right = 602.0
offset_bottom = 123.0
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_6ofam")
placeholder_text = " "
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="emailEnter" type="LineEdit" parent="mcLogin/LoginScreen/vb_account/Account/Email"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 590.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_4qapi")
theme_override_styles/focus = SubResource("StyleBoxFlat_1i2xe")
placeholder_text = "Enter Account"
max_length = 50
caret_blink = true
structured_text_bidi_override = 3

[node name="vb_password" type="VBoxContainer" parent="mcLogin/LoginScreen"]
layout_mode = 2
offset_left = 543.0
offset_top = 551.0
offset_right = 1152.0
offset_bottom = 695.0

[node name="Password" type="Label" parent="mcLogin/LoginScreen/vb_password"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7qned")
theme_override_font_sizes/font_size = 40
text = "Password"

[node name="indicator2" type="Label" parent="mcLogin/LoginScreen/vb_password/Password"]
layout_mode = 2
offset_left = 177.0
offset_top = -2.0
offset_right = 208.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "*"

[node name="password" type="TextEdit" parent="mcLogin/LoginScreen/vb_password/Password"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
offset_left = 10.0
offset_top = 69.0
offset_right = 611.0
offset_bottom = 126.0
theme_override_styles/normal = SubResource("StyleBoxFlat_6ofam")

[node name="passwordEnter" type="LineEdit" parent="mcLogin/LoginScreen/vb_password/Password/password"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 0
offset_left = 12.0
offset_top = 3.0
offset_right = 593.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_4qapi")
theme_override_styles/focus = SubResource("StyleBoxFlat_u1orn")
placeholder_text = "Enter Password"
max_length = 20
caret_blink = true
secret = true
secret_character = "âœ¦"

[node name="vb_loginButton" type="VBoxContainer" parent="mcLogin/LoginScreen"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
offset_left = 561.0
offset_top = 1010.0
offset_right = 1145.0
offset_bottom = 1105.0
theme_override_constants/separation = 40

[node name="forgotPassword" type="Button" parent="mcLogin/LoginScreen/vb_loginButton"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7qned")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_04ftm")
theme_override_styles/hover = SubResource("StyleBoxFlat_5rgar")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7pi3v")
theme_override_styles/disabled = SubResource("StyleBoxFlat_x06gj")
theme_override_styles/focus = SubResource("StyleBoxFlat_s1mlt")
text = "Forgot Password?"

[node name="Options" type="TextureRect" parent="mcLogin/LoginScreen"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 0
offset_left = 2017.0
offset_top = 973.0
offset_right = 2496.0
offset_bottom = 1249.0
texture = ExtResource("5_kowwg")
expand_mode = 1

[node name="createAccount" type="Button" parent="mcLogin/LoginScreen/Options"]
layout_mode = 0
offset_left = 101.0
offset_top = 86.0
offset_right = 398.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_y8exg")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_75q5s")
theme_override_styles/hover = SubResource("StyleBoxTexture_qjy2l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ufaa2")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oruqj")
theme_override_styles/focus = SubResource("StyleBoxFlat_una7u")
text = "Create Account "
icon = ExtResource("7_2g346")
icon_alignment = 2
expand_icon = true

[node name="Exit" type="Button" parent="mcLogin/LoginScreen/Options"]
layout_mode = 0
offset_left = 294.0
offset_top = 139.0
offset_right = 398.0
offset_bottom = 196.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_y8exg")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_75q5s")
theme_override_styles/hover = SubResource("StyleBoxTexture_qjy2l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ufaa2")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oruqj")
theme_override_styles/focus = SubResource("StyleBoxFlat_una7u")
text = "Exit "
icon = ExtResource("9_gfvi5")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="Login" type="Button" parent="mcLogin/LoginScreen/Options"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
offset_left = -1451.0
offset_top = -37.0
offset_right = -867.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("4_7qned")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_c4orr")
theme_override_styles/hover = SubResource("StyleBoxFlat_qya8g")
text = "Log In"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 30.0
offset_right = 1692.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_yfotg")
theme_override_font_sizes/font_size = 90
text = "VivaVocabulario"
horizontal_alignment = 1

[node name="errorMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 561.0
offset_top = 733.0
offset_right = 1148.0
offset_bottom = 889.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_y8exg")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3

[node name="Panel" type="Sprite2D" parent="."]
position = Vector2(858, 264)
scale = Vector2(0.432184, 0.106645)
texture = ExtResource("11_rt8o8")

[node name="login" type="Label" parent="."]
layout_mode = 0
offset_left = 673.0
offset_top = 232.0
offset_right = 1042.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_y8exg")
theme_override_font_sizes/font_size = 40
text = "Log In"
horizontal_alignment = 1
vertical_alignment = 1


